[package]
name = "ankiconnect"
version = "0.1.0"
edition = "2021"
description = "A Rust library for interacting with AnkiConnect."
license = "MIT"
authors = ["Eyad Issa <eyadlorenzo@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
