[package]
name = "ankiconnect"
version = "0.2.0"
edition = "2021"
description = "A Rust library for interacting with AnkiConnect."
license = "MIT"
authors = ["Eyad Issa <eyadlorenzo@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
ureq = { version = "2.7.1", features = ["json"] }
