[package]
name = "ankitu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Eyad Issa <eyadlorenzo@gmail.com>"]
description = "A command line tool to manage Anki decks, with a focus on collaborative decks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
dialoguer = "0.10.4"
home = "0.5.5"
owo-colors = "3.5.0"
toml = "0.7.4"
ankiconnect = { path = "../ankiconnect" }
serde = { version = "1.0.164", features = ["derive"] }
